--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,8 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Inventory{% endblock %}
 
 {% block body %}
+
+{% for message in app.flashes('notice') %}
+   <div class="row">
+      <div class="col-lg-12">
+      <div class="alert alert-success" role="alert">
+        {{ message }}
+      </div>
+      </div>
+    </div>
+{% endfor %}
+    
     <div class="row">
       <div class="col-lg-3 col-sm-4">
         {{ form(form) }}
@@ -31,7 +42,7 @@
                 <td> {{ product.getName() }}</td>
                 <td> {{ product.getCategory().getName()  }}</td>
                 <td> 
-                  <button class="btn btn-warning">Edit</button>
+                  <a href="{{ path('product.show', { 'id' : product.getId}) }}"><button class="btn btn-warning">Edit</button></a>
                   <button  class="btn btn-danger delete" data-action="{{ path('product.delete', {'id':  product.getId }) }}" data-id="{{ product.getId }}">Delete</button>
                 </td>
             </tr>
@@ -57,13 +68,10 @@
           $(document).on('click','.delete',function(){
             if(confirm("Are you sure you want to delete this record?")){
               let action = $(this).data('action');
-
               $('#deleteForm').attr('action',action);
               $('#deleteForm').submit();
 
-
             }
-           
           })
       })
     </script>
